# CloseProcessOnRemoteHost

Client/: .gitignore  CClientHandler.cpp  CClientHandler.h  CError.cpp  CError.h  CLinuxClient.cpp  CLinuxClient.h  CLinuxProcess.cpp  CLinuxProcess.h  CMakeLists.txt  CSerializeMap.h  CWinClient.cpp  CWinClient.h  CWinProcess.cpp  CWinProcess.h  Client.cpp  Client.h  IClient.cpp  IClient.h  IProcess.h  Makefile  Process.cpp  Process.h  main.cpp
Server/: .gitignore  CError.cpp  CError.h  CMakeLists.txt  CSerializeMap.h  CServerHandler.cpp  CServerHandler.h  IServer.cpp  IServer.h  LinuxServer.cpp  LinuxServer.h  Makefile  Server.cpp  Server.h  WinServer.cpp  WinServer.h  main.cpp  СError.cpp
