# CMakeList.txt: проект CMake для Server; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("Server")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Server "Server.cpp" "Server.h" "CSerializeMap.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET Server PROPERTY CXX_STANDARD 20)
endif()

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
